--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
+        "simplehtmldom/simplehtmldom": "^2.0@RC",
         "spatie/geocoder": "^3.8"
     },
     "require-dev": {
